--- a/AnimeGirls/Views/ApplicationType/Index.cshtml
+++ b/AnimeGirls/Views/ApplicationType/Index.cshtml
@@ -9,7 +9,7 @@
         </div>
         <div class="col-6 text-right">
             <a asp-controller="ApplicationType" asp-action="Create" class="btn btn-primary">
-                Create New Application Type
+             <i class="fas fa-plus"></i> Create New Application Type
             </a>
         </div>
     </div>
@@ -17,14 +17,11 @@
 
     @if (Model.Count() > 0)
     {
-        <table class="table table-bordered table-striped" style="width:100">
+        <table class="table table-bordered table-striped" style="width:100%">
             <thead>
                 <tr>
                     <th>
-                        Application Type Name
-                    </th>
-                    <th>
-                        Display Order
+                        Application Type 
                     </th>
                 </tr>
             </thead>
@@ -32,11 +29,18 @@
                 @foreach(var obj in Model)
                 {
                     <tr>
-                        <td width="50">
+                        <td width="50%">
                             @obj.Name
-                        </td>
-                        <td width="50">
-                            
+                        </td>   
+                        <td class="text-center">
+                            <div class="w-75 btn-group" role="group">
+                                <a asp-controller="ApplicationType" asp-route-Id="@obj.Id" asp-action="Edit" class="btn btn-primary mx-2">
+                                  <i class="fas fa-edit"></i>
+                                </a>
+                                <a asp-controller="ApplicationType" asp-route-Id="@obj.Id" asp-action="Delete" class="btn btn-danger mx-2">
+                                  <i class="fas fa-trash"></i>
+                                </a>
+                            </div>
                         </td>
                     </tr>
                 }
